cargo-features = ["edition2024"]

[package]
name = "samv71q21rt"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = { version = "1", optional = true }
cortex-m = ">=0.7.6"
cortex-m-rt = { version = ">=0.6.13", optional = true }
vcell = ">=0.1.2"

[features]
rt = ["cortex-m-rt/device", "dep:cortex-m-rt"]
critical-section = ["dep:critical-section"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
